# fusabi-tui-runtime

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOTRELOAD_IMPLEMENTATION.md  MIGRATION.md  README.md  THEME_SYSTEM.md  justfile  test_our_widgets.sh
.github/workflows/: ci.yml  release.yml
crates/fusabi-tui-core/: Cargo.toml  README.md
crates/fusabi-tui-core/src/: buffer.rs  layout.rs  lib.rs  style.rs  symbols.rs  theme.rs
crates/fusabi-tui-engine/: Cargo.toml  README.md
crates/fusabi-tui-engine/examples/: basic_app.rs  dashboard.rs  error_overlay_demo.rs
crates/fusabi-tui-engine/src/: dashboard.rs  error.rs  event.rs  fusabi_runtime.rs  lib.rs  loader.rs  overlay.rs  watcher.rs
crates/fusabi-tui-engine/tests/: README.md  harness.rs  input.rs  integration_test.rs  mod.rs  pty_utils.rs  snapshot.rs
crates/fusabi-tui-render/: Cargo.toml  README.md
crates/fusabi-tui-render/src/: crossterm.rs  error.rs  lib.rs  renderer.rs  terminal.rs  test.rs
crates/fusabi-tui-scarab/: Cargo.toml
crates/fusabi-tui-scarab/examples/: scarab_plugin.rs
crates/fusabi-tui-scarab/src/: convert.rs  error.rs  lib.rs  plugin.rs  renderer.rs  shared.rs
crates/fusabi-tui-widgets/: Cargo.toml  README.md
crates/fusabi-tui-widgets/examples/: block_demo.rs  theme_demo.rs
crates/fusabi-tui-widgets/src/: barchart.rs  block.rs  borders.rs  clear.rs  gauge.rs  lib.rs  list.rs  paragraph.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs  text.rs
docs/: ECOSYSTEM_OVERVIEW.md  NEXT_STEPS_PROPOSAL.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md  WORK_LOG.md
docs/architecture/: OVERVIEW.md  RATATUI_ANALYSIS.md
docs/design/: FUSABI_ENHANCEMENTS.md  HOT_RELOAD_DASHBOARD.md  PACKAGE_MANAGEMENT.md
docs/tutorials/: 01-hello-world.md  02-interactive-ui.md  03-tables-data.md  04-hot-reload.md  README.md
examples/: basic_app.rs  dashboard.rs
fsx/examples/: hello_tui.fsx
fsx/tui/: buffer.fsx  cell.fsx  color.fsx  layout.fsx  rect.fsx  style.fsx  symbols.fsx
