[package]
name = "fusabi-tui-render"
version = "0.1.0"
edition = "2021"
description = "Renderer abstraction for Fusabi TUI"
license = "MIT"

[dependencies]
fusabi-tui-core = { path = "../fusabi-tui-core" }
crossterm = { version = "0.28", optional = true }
thiserror = "1.0"

[features]
default = ["crossterm-backend"]
crossterm-backend = ["dep:crossterm"]
