[package]
name = "fusabi-tui-widgets"
version = "0.1.0"
edition = "2021"
description = "Widget library for Fusabi TUI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fusabi-lang/fusabi-tui-runtime"

[dependencies]
fusabi-tui-core = { path = "../fusabi-tui-core" }
unicode-width = "0.1"
bitflags = "2.4"
